bindata/assets/secondary-scheduler/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: "secondary-scheduler"
  namespace: ${NAMESPACE}
  labels:
    app: "secondary-scheduler"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "secondary-scheduler"
  template:
    metadata:
      annotations:
        openshift.io/required-scc: restricted-v2
      labels:
        app: "secondary-scheduler"
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: "etckubernetes"
          configMap:
            name: ${CONFIGMAP}
        - name: tmp
          emptyDir: {}
        - name: certs-dir
          secret:
            secretName: secondary-scheduler-serving-cert
      restartPolicy: "Always"
      containers:
        - name: "secondary-scheduler"
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
          image: ${IMAGE}
          terminationMessagePolicy: FallbackToLogsOnError
          command:
            - /bin/kube-scheduler
          args:
            - --config=/etc/kubernetes/config.yaml
            - --tls-cert-file=/certs-dir/tls.crt
            - --tls-private-key-file=/certs-dir/tls.key
            - --leader-elect=true
            - --leader-elect-lease-duration=137s
            - --leader-elect-renew-deadline=107s
            - --leader-elect-resource-lock=leases
            - --leader-elect-resource-name=secondary-scheduler
            - --leader-elect-resource-namespace=${NAMESPACE}
            - --leader-elect-retry-period=26s
          resources:
            requests:
              cpu: 15m
              memory: 50Mi
          ports:
          - containerPort: 10259
          livenessProbe:
            httpGet:
              scheme: HTTPS
              port: 10259
              path: healthz
            initialDelaySeconds: 45
            timeOutSeconds: 10
          readinessProbe:
            httpGet:
              scheme: HTTPS
              port: 10259
              path: healthz
            initialDelaySeconds: 45
            timeOutSeconds: 10
          volumeMounts:
            - mountPath: "/etc/kubernetes"
              name: "etckubernetes"
            - name: tmp
              mountPath: "/tmp"
            - mountPath: "/certs-dir"
              name: certs-dir
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: "secondary-scheduler"
                topologyKey: kubernetes.io/hostname
      serviceAccountName: "secondary-scheduler"
